--- a/use-state/src/App.css
+++ b/use-state/src/App.css
@@ -3,3 +3,10 @@ button{
   height: 100px;
   background-color: green;
 }
+
+.colordiv{
+  height: 200px;
+  width: 200px;
+  border-radius: 50px;
+  border: 2px solid green;
+}
